ecs-ambient/expose.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: expose-istiod
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  - name: xds-tls
    port: 15012
    protocol: TCP
  - name: xds-plain
    port: 15010
    protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: istiod-xds-tls
  namespace: istio-system
spec:
  parentRefs:
  - name: expose-istiod
    sectionName: xds-tls
  rules:
  - backendRefs:
    - name: istiod
      port: 15012
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: istiod-xds
  namespace: istio-system
spec:
  parentRefs:
  - name: expose-istiod
    sectionName: xds-plain
  rules:
  - backendRefs:
    - name: istiod
      port: 15010
