ecs-ambient/deny-shell-ecs-to-httpbin.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-shell-ecs-to-httpbin
  namespace: default
spec:
  selector:
    matchLabels:
      app: httpbin
  action: DENY
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/ecs/sa/default"]
